# claude-plugins

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  buddy  test-detect.sh
.claude-plugin/: marketplace.json
.code-explorer/: project.toml  usage.db
buddy/: .gitignore  .orphaned_at  CLAUDE.md  CLAUDE.original.md  README.md  pyproject.toml
claude-statusline/: README.md
code-explorer-routing/: README.md
codescout-companion/: .gitignore  README.md
codescout-routing/: README.md
docs/: INSTALL-COPILOT.md  marker-convention.md  pi-integration.md
eval/: README.md  promptfoo.yaml
pi/: README.md  install.sh
scripts/: bump-cache.sh  check-versions.sh  gen-copilot-hook-wrappers.mjs  install-hooks.sh  lib-copy-plugin.sh  pre-push-guard.sh  release.sh  sync-copilot.sh
sdd/: README.md  bootstrap-sdd.sh
session-bridge/: README.md
session-bridge/mcp-server/: Cargo.toml
session-bridge/mcp-server/src/: claude_cli.rs  error.rs  lib.rs  main.rs  registry.rs  tools.rs
session-bridge/mcp-server/tests/: claude_cli.rs  registry.rs
tests/: run-all.sh  test-ce-activate-project.sh  test-concurrent-register.sh  test-cross-platform-hooks.sh  test-cs-workspace-marker.sh  test-detect-tools.sh  test-git-worktree-guard.sh  test-hook-permissions.sh  test-hooks-json-registration.sh  test-il3-warn-hook.sh  test-passover-template.sh  test-pre-edit-hint.sh  test-pre-task-hint.sh  test-pre-tool-guard.sh  test-recon-count.sh  test-register.sh  test-sdd-hooks.sh  test-session-start-payload.sh  test-session-start.sh  test-session-state.sh  test-skill-hints-lib.sh  (+8 more)
(+559 files in other folders)
